# pictray

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yaml  release.yaml
src/: app.rs  clipboard.rs  events.rs  hotkeys.rs  icon.rs  main.rs  storage.rs  tray.rs  ui.rs  window_effects.rs
ui/: app.slint
