[package]
name = "pictray"
version = "0.0.3"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
blake3 = "1.8.4"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
global-hotkey = "0.7.0"
image = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
slint = { version = "1.16.1", features = ["unstable-winit-030"] }
tray-icon = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
drag = "2.1.0"

[build-dependencies]
slint-build = "1.16.1"
