[package]
name = "pictray"
version = "0.0.3"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
blake3 = "1.8.4"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
global-hotkey = "0.7.0"
image = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
slint = { version = "1.16.1", features = ["unstable-winit-030"] }
tray-icon = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
drag = "2.1.0"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_UI_Controls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSGraphics", "NSResponder", "NSUserInterfaceItemIdentification", "NSView", "NSVisualEffectView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSGeometry", "NSString"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }

[build-dependencies]
slint-build = "1.16.1"
